# git-trainer

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.sh  cache.go  config.json  go.mod  install.sh  justfile  main.go  run.sh  schema.sql  start.sh
.github/workflows/: build_images.yml
cli/: Cargo.toml
cli/src/: main.rs
git-trainer-in-container/: choice.go  cmd.go  description.json  go.mod  go.sum  main.go  update.go  view.go
migrations/18032026_merge_conflict/: down.sql  up.sql
migrations/22032026_add_bash_history/: up.sql
migrations/23022026_branching/: down.sql  up.sql
migrations/23022026_hello_world/: down.sql  up.sql
migrations/23032026_forget_about_that_1/: down.sql  up.sql
migrations/24032026_just_push_it/: down.sql  up.sql
migrations/24032026_small_but_mighty/: down.sql  up.sql
src/: app.rs  attempts.toml  db.rs  docker.rs  info.toml  main.rs  popup.rs  task.rs  test.rs  tty.rs  ui.rs
src/attempt_manager/: app.rs  ui.rs
src/main_menu/: app.rs  ui.rs
src/pty/: ui.rs
tasks/base/: build.sh  justfile
tasks/branching/: build.sh  justfile
tasks/forget-about-that-1/: build.sh  justfile
tasks/hello-world/: build.sh  justfile
tasks/just-push-it/: .gitignore  justfile
tasks/merge-conflict/: build.sh  justfile
tasks/small-but-mighty/: justfile
tasks/task1/: Dockerfile  build.sh  description.json
tasks/task1-container/: Dockerfile  README.md  build.sh  run.sh
tasks/task2/: Dockerfile  build.sh  description.json  run.sh
tests/branching/: test1.sh  test2.sh  test3.sh  test4.sh  test5.sh  test6.sh  (+1 more)
tui/: Cargo.toml
(+67 files in other folders)
